# open-wx-data

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/open_wx_data/: __about__.py  __init__.py  gfs.py  grib.py
tests/: __init__.py  test_gfs.py  test_grib.py
tests/sample_data/: gfs.t00z.pgrb2.0p25.f001.idx
